# Montage

./: .coverage  .coverage.MBP-M2MAX-2.local.16177.XAVaGiax  .coverage.MBP-M2MAX-2.local.16868.XzVpWGmx  .coverage.MBP-M2MAX-2.local.17175.XbnjzDAx  .coverage.MBP-M2MAX-2.local.17223.XwqDaWFx  .coverage.MBP-M2MAX-2.local.17475.XgEgkCPx  .coverage.MBP-M2MAX-2.local.18361.XYZQzXWx  .coverage.MBP-M2MAX-2.local.18518.XsgMRUOx  .coverage.MBP-M2MAX-2.local.18833.XarQUwox  .coverage.MBP-M2MAX-2.local.30631.XpKbVrkx  .coverage.MBP-M2MAX-2.local.30979.XlrENoMx  .coverage.MBP-M2MAX-2.local.32654.Xbvadorx  .coverage.MBP-M2MAX-2.local.32894.XkUILwGx  .coverage.MBP-M2MAX-2.local.54068.XBtLDCdx  .env.example  .env.test  .gitignore  .pre-commit-config.yaml  .secrets.baseline  100_PERCENT_INTEGRATION_VERIFIED.md  ADAPTIVE_PIPELINE_SUMMARY.md  CLAUDE.md  CLEANUP_COMPLETE.md  CLEANUP_SUMMARY.md  CLI_EXECUTION_PROOF.md  CODEBASE_AUDIT_REPORT.md  COMPLETE_IMPLEMENTATION_PLAN.md  ChatRules.md  DOCKER_COMPOSE_EVIDENCE.md  Dockerfile  Dockerfile.gpu  ENTERPRISE_QA_AUDIT_SUMMARY.md  ENTERPRISE_QA_COMPLETE_AUDIT.json  FINAL_IMPLEMENTATION_REPORT.md  FINAL_SIGN_OFF.md  FORENSIC_AUDIT_REPORT.md  HONEST_REALITY_REPORT.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_PLAN.md  KEY_ROTATION_INSTRUCTIONS.md  (+232 more)
.claude/: CLAUDE.md  Tasks2.md
backup_before_cleaning/: honest_reality_test.py  process_user_video.py  progressive_renderer.py  quick_performance_benchmark.py  standalone_performance_benchmark.py  test_each_function_honestly.py  validate_pipeline_100_percent.py
backup_removed_fake_components/: analyze_test_video.py  create_full_story_video.py  create_perfect_video.py  emotion_analyzer.py  highlight_selector_original.py  narrative_detector.py  speaker_analysis.py
docs/: api-reference.md  audio-normalization.md  checkpoint-usage.md  color-conversion.md  concat-editor.md  database-setup.md  database-usage.md  error_propagation_migration.md  logging-system.md  metrics-guide.md  sys_path_hacks.md  system-integration.md  video-processing.md  video-validation.md
documentation/: billing_verification_report.md
evidence/: dependency_probe.json  pytest.txt  stub_scan.txt
examples/: checkpoint_demo.py  metrics_demo.py
k8s/: deploy-async-pool-deployment.yaml  deploy-async-pool-service.yaml
migrations/: 001_init.sql  003_add_web_api_jobs_table.sql  add_user_id_to_jobs.sql
monitoring/: README.md  deploy.sh  docker-compose.yml  grafana-dashboard.json
montage/: __init__.py  __main__.py  compat.py  config.py  config_backup.py  legacy_adapter.py  orchestrator.py  settings.py  settings_v2.py
output/: FINAL_PROFESSIONAL_SUCCESS.md
qa_test_results/: audio_energy.json
scripts/: billing_check.py  capture_perf_baseline.sh  collect_app_metrics.sh  collect_canary_metrics.sh  collect_db_metrics.sh  collect_perf_baseline.py  coverage_all.sh  coverage_basic.sh  coverage_imports.py  create_admin_user.py  deploy_staging_canary.sh  evaluate_canary.py  evaluate_db_canary.py  evaluate_perf_guard.py  final_cleanup.py  flatten_directories.py  identify_consolidation.py  identify_dead_code.py  identify_dead_flags.py  install-metal-cache-purge.sh  install_success_gate_cron.sh  metal-cache-purge.sh  no_unchecked_subprocess.py  repo_scan.py  rollback_db.sh  rotate_keys.sh  run_e2e_smoke.sh  run_mixed_workload.py  run_real_canary.sh  run_stress_test.sh  simulate_async_pool_canary.py  simulate_baseline_metrics.py  simulate_db_metrics.py  simulate_real_canary.py  simulate_stage_a_canary.py  simulate_stage_b_canary.py  simulate_stage_c_canary.py  stub_scan.py  stub_scan_allow.txt  stubs_report.py  (+3 more)
src/: __init__.py  analyze_video.py  budget_decorator.py  config.py  fallback_selector.py  ffmpeg_utils.py  (+3 more)
(+293 files in other folders)
